--- a/server/pom.xml
+++ b/server/pom.xml
@@ -17,7 +17,17 @@
 	</properties>
 
 	<dependencies>
-		<dependency>
+        <dependency>
+            <groupId>com.sun.net.httpserver</groupId>
+            <artifactId>http</artifactId>
+            <version>20070405</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.2.4</version>
+        </dependency>
+        <dependency>
 			<groupId>edu.chalmers.sankoss</groupId>
 			<artifactId>sankoss-core</artifactId>
 			<version>${project.version}</version>
@@ -62,7 +72,7 @@
 			</plugin>
 
 			<!-- this builds a totally standalone jar file when you invoke: mvn package 
-				-Pdesktop -->
+				-Pserver -->
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<version>2.4</version>
