--- a/core/pom.xml
+++ b/core/pom.xml
@@ -19,6 +19,12 @@
 			<artifactId>kryonet-all</artifactId>
 			<version>2.18</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
