Added ini file reader. Added ability to load settings from ini files.

--- a/desktop/pom.xml
+++ b/desktop/pom.xml
@@ -41,6 +41,12 @@
 			<version>${gdx.version}</version>
 			<classifier>natives-desktop</classifier>
 		</dependency>
+
+        <dependency>
+            <groupId>org.ini4j</groupId>
+            <artifactId>ini4j</artifactId>
+            <version>0.5.2</version>
+        </dependency>
 	</dependencies>
 
 	<build>
