--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,8 @@
 	<name>Sankoss Parent</name>
 
 	<properties>
-		<gdx.version>0.9.9</gdx.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<gdx.version>1.0.2-SNAPSHOT</gdx.version>
 	</properties>
 
 	<repositories>
@@ -30,8 +31,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.5.1</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>1.7</source>
+					<target>1.7</target>
 				</configuration>
 			</plugin>
 		</plugins>
