Fixed desktop pom

--- a/desktop/pom.xml
+++ b/desktop/pom.xml
@@ -13,7 +13,7 @@
 	<name>Sankoss desktop</name>
 
 	<properties>
-		<mainClass>edu.chalmers.sankoss.java.SankossDesktop</mainClass>
+		<mainClass>edu.chalmers.sankoss.desktop.SankossDesktop</mainClass>
 	</properties>
 
 	<dependencies>
